# meat-game

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: renderer.cpp  renderer.h  window.cpp  window.h
src/game/: game.cpp  game.h
src/systems/: input_system.cpp  input_system.h
